started working on the game

--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GAME</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="title">
+        <p>ROCK PAPER SCISSORS</p>
+    </div>
+    <div class="game">
+        
+    </div>
+    <div class="player-buttons">
+        <input type="button" value="rock">
+        <input type="button" value="paper">
+        <input type="button" value="scissors">
+    </div>
+    <div class="footer">
+        <p><a href="https://github.com/Ziyad21z" target="_blank">Ziyad</a></p>
+    </div>
+    <script src="script.js"></script>
 </body>
+
 </html>
