worked a little on it
i relied that i am not good at css at all so i ditched the interface and i am gonna focus on the js only for now

--- a/index.html
+++ b/index.html
@@ -9,20 +9,10 @@
 </head>
 
 <body>
-    <div class="title">
-        <p>ROCK PAPER SCISSORS</p>
-    </div>
-    <div class="game">
-        
-    </div>
-    <div class="player-buttons">
-        <input type="button" value="rock">
-        <input type="button" value="paper">
-        <input type="button" value="scissors">
-    </div>
-    <div class="footer">
-        <p><a href="https://github.com/Ziyad21z" target="_blank">Ziyad</a></p>
-    </div>
+    <input type="button" id="rock" value="rock" onclick="playerChoice('rock')">
+    <input type="button" id="paper" value="paper" onclick="playerChoice('paper')">
+    <input type="button" id="scissors" value="scissors" onclick="playerChoice('scissors')"><br>
+    <p id="text"></p>
     <script src="script.js"></script>
 </body>
 
