finished the game
i am gonna return to this when i get better at programming to make it better and more efficient.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 </head>
 
 <body>
-    <input type="button" id="rock" value="rock" onclick="playerChoice('rock')">
-    <input type="button" id="paper" value="paper" onclick="playerChoice('paper')">
-    <input type="button" id="scissors" value="scissors" onclick="playerChoice('scissors')"><br>
-    <p id="text"></p>
+    <h1>open the console</h1>
+    <h4>the first to 5 win</h4>
     <script src="script.js"></script>
 </body>
 
