--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
         <input type="button" value="PAPER" id="paper" onclick="getPlayerChoice('paper')">
         <input type="button" value="SCISSORS" id="scissors" onclick="getPlayerChoice('scissors')">
     </div>
-    <div class="footer">
-        
-    </div>
+    
+    <div class="footer"></div>
 </body>
 
 </html>
